--- a/plantuml/package.json
+++ b/plantuml/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "actor": "puml generate actor.puml -o actor_uml.png",
+    "actor": "puml generate actor.puml  -o actor_uml.png",
+    "uml": "puml generate include.puml   -o uml.png",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
